--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.18",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
